# guess_glottocode

./: .gitignore  LICENSE  README.md  pyproject.toml
guess_glottocode/: llm.py  utils.py  wikipedia.py
tests/: test_guess.py
